<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".SessionActivity" >

    <Button
        android:id="@+id/btnReturn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="onReturn"
        android:text="@string/btnReturn" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvPassChng"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1.6"
            android:text="@string/labNewPass" />

        <EditText
            android:id="@+id/editTextPassChng"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="textPersonName" />

        <Button
            android:id="@+id/btnPassChng"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1.6"
            android:onClick="onChangePass"
            android:text="@string/btnSave" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvAPISET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1.6"
            android:text="@string/labAPIPass" />

        <Spinner
            android:id="@+id/spinnerAPI"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <Button
            android:id="@+id/btnChngAPI"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1.6"
            android:onClick="onChangeAPI"
            android:text="@string/btnSave" />
    </LinearLayout>

    <Button
        android:id="@+id/btnDelAcc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="onDeleteAcc"
        android:text="@string/btnDeleteAccount" />

    <Button
        android:id="@+id/btnCloseSession"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="onCloseCurrentSession"
        android:text="@string/btnCloseSession" />

    <TextView
        android:id="@+id/tvDelSession"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/labSessionList"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="16sp" />

    <ListView
        android:id="@+id/listViewSession"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />
</LinearLayout>