<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".RegActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvReg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/labReg"
            android:textColor="#000000"
            android:textSize="16sp" />

        <Button
            android:id="@+id/btnReturnSignIn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="on_sign_in_reg"
            android:text="@string/btnSignIN" />
    </LinearLayout>

    <TextView
        android:id="@+id/tvLoginReg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/labLogin" />

    <EditText
        android:id="@+id/editTextRegLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName" />

    <TextView
        android:id="@+id/tvPassReg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/labPass" />

    <EditText
        android:id="@+id/editTextRegPass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName" />

    <Button
        android:id="@+id/btnSignUpReg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="on_sign_up_reg"
        android:text="@string/btnSignUP" />

</LinearLayout>